src/objects/maps__Layer__c.object
<CustomObject>
    <fields>
        <fullName>maps__ArcGISWebMapC2C__c</fullName>
        <label>ArcGIS WebMap Click2Create</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__EmailOnAggregationSuccess__c</fullName>
        <label>Email On Aggregation Success</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>maps__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Folder</label>
        <referenceTo>maps__Folder__c</referenceTo>
        <relationshipLabel>Maps Layers</relationshipLabel>
        <relationshipName>Maps_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Options__c</fullName>
        <inlineHelpText>Used to store the layer&apos;s options in a JSON format.</inlineHelpText>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <inlineHelpText>Used to determine what layer type the record represents.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Layer</fullName>
                </value>
                <value>
                    <fullName>Tile Set</fullName>
                </value>
                <value>
                    <fullName>ArcGIS Online</fullName>
                </value>
                <value>
                    <fullName>Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populated if directly under a user&apos;s personal folder, otherwise blank. If blank and the folder lookup is blank this will appear on the corporate folder. If the folder is filled out it could be a personal or corporate folder.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maps_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Layer</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>maps__Folder__c</columns>
        <columns>maps__User__c</columns>
        <columns>maps__Options__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>maps__ArcGIS_Layers</fullName>
        <columns>NAME</columns>
        <columns>maps__Folder__c</columns>
        <columns>maps__Description__c</columns>
        <columns>maps__Options__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>maps__Type__c</field>
            <operation>equals</operation>
            <value>ArcGIS Online</value>
        </filters>
        <label>ArcGIS Layers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>